2007-08-20  Maurits van Rees  <maurits@vanrees.org>

	* src/archgenxml/WorkflowGenerator.py
	(WorkflowGenerator.generateWorkflows): Only write out the
	rolemap.xml when we have extra roles to define there.  Might need
	to be done in the template itself with a dtml-if or something.
	This might fix http://plone.org/products/archgenxml/issues/135
	
2007-08-08  Reinout van Rees  <reinout@zestsoftware.nl>

	* setup.py: Making it a 1.6 beta 1.

2007-08-06  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/WorkflowGenerator.py: Switched over to generic
	setup workflow generation. The old files (in Extensions/*) have
	been removed, everything is now in profiles/default.

2007-08-01  Maurits van Rees  <m.van.rees@zestsoftware.nl>

	* src/archgenxml/zopeimportfixer.py (prepareZopeImport): Add
	descriptive error message when we cannot import zope.component but
	_can_ import zope itself due to a messed up PYTHONPATH.

2007-07-19  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchetypesGenerator.py: Added <<atfile>>,
	<<atevent>> and <<atdocument>> stereotypes in addition to the
	already existing <<atfolder>>.

2007-05-30  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/zopeimportfixer.py: Moved the zope import fixer
	and the logfile initializer to separate modules to clean up
	utils.py. (utils.py can now import zope stuff, too).

	* various files: Cleanup.

2007-05-22  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchGenXML.py: Added first view (for generating a
	config.py). Still primitive, but I've at least moved off some code
	to a view. Also added a still-empty profiles/default genericsetup
	directory including registering it in the __init__.py and applying
	it in the install.py. Onwards to the next thing!

2007-03-06  Reinout van Rees  <reinout@vanrees.org>

	* src/archgenxml/ArchetypesGenerator.py: Pander added support for
	datagridwidget, atcolorpicker widget and atcountry widget. If you